# kmeans

./: CMakeLists.txt  shell.nix
data/: bf_assignments_1.csv  bf_assignments_10.csv  bf_assignments_2.csv  bf_assignments_3.csv  bf_assignments_4.csv  bf_assignments_5.csv  bf_assignments_6.csv  bf_assignments_7.csv  bf_assignments_8.csv  bf_assignments_9.csv  bf_cluster_1.csv  bf_cluster_10.csv  bf_cluster_2.csv  bf_cluster_3.csv  bf_cluster_4.csv  bf_cluster_5.csv  bf_cluster_6.csv  bf_cluster_7.csv  bf_cluster_8.csv  bf_cluster_9.csv  centroids.csv  clusters.csv  data2k.csv  kd_assignments_1.csv  kd_assignments_10.csv  kd_assignments_2.csv  kd_assignments_3.csv  kd_assignments_4.csv  kd_assignments_5.csv  kd_assignments_6.csv  kd_assignments_7.csv  kd_assignments_8.csv  kd_assignments_9.csv  kd_cluster_1.csv  kd_cluster_10.csv  kd_cluster_2.csv  kd_cluster_3.csv  kd_cluster_4.csv  kd_cluster_5.csv  kd_cluster_6.csv  (+5 more)
include/: kdtree.h  kmeans.h  kmeansOld.h  kmeans_brute_force.h  kmeans_kdtree.h  node.h  timer.h  utils.h
python/: cluster_analysis.py  time_analysis.py  time_analysis_k.py  time_analysis_n.py
src/: kmeans.cpp  kmeansOld.cpp  kmeans_brute_force.cpp  kmeans_kdtree.cpp  main.cpp  temp_main.cpp  timer.cpp
